--- a/atg/package.json
+++ b/atg/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "npx playwright test",
+    "test-report": "npx playwright show-report",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.0",
     "tailwindcss": "^3.4.8"
   }
 }
